--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  user-select: none;
+}
+
+h1,
+h2,
+p {
+  margin: 0;
+}
